# flight-optimizer

./: .gitignore  CNAME  Dockerfile  docker-compose.yaml  index.html  pyproject.toml
flight_optimizer/: api.py  app.py  repository.py  schemas.py
frontend/: index.html
frontend/scripts/: main.js
frontend/styles/: components.css  datepicker.css  forms.css  layout.css  themes.css
scripts/: airports.js  main.js  results.js  spinner.js  theme.js
styles/: components.css  datepicker.css  layout.css  themes.css
